# sciviz

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: AUTHORING.md  DEBUGGING.md
docs/dev/: connect-api.md
gallery/: action_conditioning_modes.py  amortized_analysis.py  bplus_tree.py  crossbar_pruning.py  deepseek_v3.py  diffusion.py  fig01.py  fig02.py  fig03.py  fig04.py  fig05.py  fig06.py  fig07.py  fig08.py  fig09.py  fig10.py  lora_adaptation.py  lsm_tree.py  memory_hierarchy.py  moe_routing.py  paxos.py  pipeline_parallelism.py  quantization.py  roofline.py  speculative_decoding.py  transformer_attention.py  ttt_mlp.py
gallery/reference/: README.md
plans/: ten-of-ten.md  topological-router.md
sciviz/: __init__.py  _labelplacer.py  charts.py  composition.py  core.py  diagram.py  elements.py  graphs.py  grid.py  layout.py  math.py  ml.py  palette.py  primitives.py  routing.py  specialized.py  structures.py
sciviz/_assets/: __init__.py  _lucide.py
sciviz/_cli/: __init__.py  debug.py
sciviz/auto/: __init__.py  _debug_page.py  _debug_template.html  debug.py  labelplacer.py  labels.py  router.py
sciviz/charts/: __init__.py
sciviz/composition/: __init__.py  _anchor.py  _badge.py  _banner.py  _brace.py  _bus.py  _captioned.py  _compound.py  _flow.py  _flowed.py  _group.py  _inline.py  _labeledchain.py  _loopicon.py  (+3 more)
scripts/: bootstrap.sh  sciviz_debug.py
tests/: test_aligned_columns.py  test_aligned_stack.py  test_arrow_marker_gap.py  test_arrow_marker_unified.py  test_arrow_shaft_density.py  test_authoring_examples.py  test_auto_contrast_text.py  test_auto_layout_overhaul.py  test_badge_operator.py  test_banner.py  test_box_badge.py  test_box_element_label.py  test_box_loss_arrow.py  test_box_sub_label.py  test_box_wrap_inflate.py  test_bus_junction.py  test_bus_label_placer.py  test_canvas_icon_image.py  test_captioned.py  test_card_variadic_and_cardrow.py  test_column_content_align.py  test_connect_auto_route.py  test_connect_parity.py  test_debug.py  test_flow_column_gap_routing.py  test_flow_defaults.py  test_flow_endpoint_sides.py  test_gallery_pixel_parity.py  test_gallery_smoke.py  test_grid_autoflow_multi_anchor.py  test_grid_primary_anchor.py  test_grouped_bar_chart.py  test_icon.py  test_image.py  test_import_direction.py  test_inner_bbox_row_align.py  test_label_placer.py  test_labeled.py  test_labeled_chain.py  test_legend_items.py  (+33 more)
(+59 files in other folders)
