[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciviz"
description = "Opinionated, compositional diagrams for scientific ML papers"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
# PNG export (fast, glyph-level font fallback via resvg)
png = ["resvg-py>=0.3"]
# PDF export (still uses cairosvg)
pdf = ["cairosvg>=2.5"]

[project.scripts]
sciviz-debug = "sciviz._cli.debug:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciviz*"]

[tool.setuptools.package-data]
"sciviz.auto" = ["_debug_template.html"]

[tool.setuptools.dynamic]
version = { attr = "sciviz.__version__" }
